--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -51,12 +51,13 @@
                             </a>
                             <button type="" id="delete_btn" class="edit-delete-btns">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35">
+                                    
                                     <g id="Layer_2" data-name="Layer 2">
                                     <g id="Layer_1-2" data-name="Layer 1">
                                     <rect class="cls-1" x="1" y="1" width="33" height="33" rx="16.5"/>
-                                    <rect class="cls-2" x="9.5" y="16.5" width="15" height="2"/>
+                                    <path class="cls-2" d="M9.63,26a2,2,0,0,0,2,2H23.41a2,2,0,0,0,2-2h0V12.25H9.63Zm11.15-10.5a.66.66,0,0,1,.66-.65.65.65,0,0,1,.65.65v9.19a.66.66,0,0,1-.65.66.67.67,0,0,1-.66-.66Zm-3.94,0a.66.66,0,0,1,1.32,0v9.19a.66.66,0,0,1-1.32,0Zm-3.93,0a.65.65,0,0,1,.65-.65.66.66,0,0,1,.66.65v9.19a.67.67,0,0,1-.66.66.66.66,0,0,1-.65-.66ZM26,8.31H21.11l-.39-.76A1,1,0,0,0,19.84,7H15.15a1,1,0,0,0-.87.55l-.39.76H9A.67.67,0,0,0,8.31,9v1.31a.67.67,0,0,0,.66.66H26a.67.67,0,0,0,.66-.66V9A.67.67,0,0,0,26,8.31Z"/>
                                     </g></g>
-                                </svg>
+                                </svg>                                
                             </button>
                         </div>
                     </div>
