--- a/pages/home.html
+++ b/pages/home.html
@@ -158,7 +158,7 @@
             </div>
             <div class="movie-populate-container">
                 <div class="movie-header clearfix">
-                    <p class="movie-header-title">
+                    <p class="movie-header-title logo">
                         <img src="../img/logo-1.png" alt="logo">
                         Movie<span>bit</span>
                     </p>
