--- a/pages/add-edit.html
+++ b/pages/add-edit.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <script
-        src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
-    </script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -38,8 +33,7 @@
     </nav>
     <section class="add-edit-wrapper">
         <div class="section-container">
-            <h1 class="add-edit-title">Add / Edit a movie</h1>
-            <!-- De verificat tipul fiecarui input... text ... number -->
+            <h1 id="add-edit-heading" class="add-edit-title">Add / Edit a movie</h1>
             <div class="inputs-container clearfix">
                 <div class="inputs-container-block">
                     <div class="input-component">
@@ -88,16 +82,6 @@
                         <label for="uploadPoster-input">Poster Link</label>
                         <input id="uploadPoster-input" type="text"></input>
                     </div>
-                    <!-- <div class="input-component upload-poster">
-                        <label for="uploadPoster-input" class="label-poster">
-                            <div>
-                                <span>Upload poster</span>
-                                <i class="fa fa-upload" aria-hidden="true"></i>    
-                            </div>
-                        </label>
-                        <input id="uploadPoster-input" type="file" style="display : none"/> 
-
-                    </div> -->
                 </div> <!-- "inputs-container-block" -->
                 <div class="inputs-container-block">
                     <div class="input-component input-description">
@@ -108,7 +92,6 @@
                 </div> <!-- "inputs-container-block" -->
             </div> <!-- class="inputs-container" -->
         </div>
-         <!-- class="inputs-container-2" -->
     </section> <!-- class="add-edit-wrapper" -->
     <footer>
         <div class="section-container">
@@ -156,7 +139,6 @@
     <script src="../views/open-menu.js"></script>
     <script src="../views/infoMessage.js"></script>
     <script src="../views/add-edit.js"></script>
-    <!-- <script src="../views/movieDetails.js"></script> -->
 </body>
 
 </html>
