--- a/pages/movieDetails.html
+++ b/pages/movieDetails.html
@@ -107,7 +107,7 @@
             <div class="footer-social">
                 <div class="footer-social-wrapper">
                     <a href="#">AH</a>
-                    <a href="#">AR</a>
+                    <a href="https://www.linkedin.com/in/alexandra-ioana-rus-574a28168">AR</a>
                     <a href="#">AF</a>
                     <a href="#">MD</a>
                     <a href="https://www.linkedin.com/in/radu-maier">RM</a>
